--- a/themes/lynx/config.toml
+++ b/themes/lynx/config.toml
@@ -17,7 +17,7 @@ disableKinds = ["taxonomy", "term"]
      	{ instagram = "https://instagram.com/ijustyn" },
      	{ threads = "https://threads.net/ijustyn" },
     	{ mastodon = "https://masto.ai/@ijustyn" },
-      { apple = { href = "https://jjay.org/tip", text = "Pay"} },
+      { apple = { href = "https://jjay.org/tip", text = "Pay", title = "Tip @ijustyn" } },
 
 
      	#{ tumblr = "https://ijustyn.tumblr.com" },
