--- a/themes/lynx/config.toml
+++ b/themes/lynx/config.toml
@@ -17,7 +17,7 @@ disableKinds = ["taxonomy", "term"]
      	{ instagram = "https://instagram.com/ijustyn" },
     	{ mastodon = "https://masto.ai/@ijustyn" },
       { threads = "https://threads.net/ijustyn" },
-      { apple = { href = "https://jjay.org/tip", text = "Pay", title = "Tip @ijustyn" } },
+      { apple = { href = "https://square.link/u/k1KB2DOt", text = "Pay", title = "Tip @ijustyn" } },
 
 
      	#{ tumblr = "https://ijustyn.tumblr.com" },
